# iot-network-ns3

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  docker-compose.yaml  iot-helper.cc  iot-helper.h  iot-sensor.cc  iot-sensor.h  iotnet-server.cc  iotnet-server.h  main.cc  server-app.cc  server-app.h
doc/: iotnet.rst
dockers/ns3/: Dockerfile
esp8266/: getwifiinfo  getwifiinfo.ino
examples/: CMakeLists.txt  iotnet-example.cc
iotnet/examples/: iotnet-example.cc
iotnet/helper/: iotnet-helper.cc  iotnet-helper.h
iotnet/model/: iotnet-server.cc  iotnet-server.h  iotnet.cc
iotnet/test/: iotnet-test-suite.cc
lib/: curl  curl-config  curl_config.h  libcpr.so.1.10.5
mlserver/: Dockerfile  main.py  model.pkl
model/: iotnet-sensor.cc  iotnet-sensor.h  iotnet.h
next-app/: .env  .gitignore  .prettierrc.json  Dockerfile  next.config.js  package.json  payload.json  server.js  tsconfig.json
next-app/lib/: db.js
next-app/pages/: 404.tsx  500.tsx  _app.tsx  index.tsx
node/: Dockerfile
ns3/: Dockerfile  run.sh
ns3/iotnet/: CMakeLists.txt  wscript
ns3/iotnet/doc/: iotnet.rst
ns3/iotnet/examples/: iotnet-example.cc  iotnet-p2p.cc  wscript
ns3/iotnet/helper/: iotnet-helper.cc  iotnet-helper.h
ns3/iotnet/model/: iotnet-app.cc  iotnet-app.h  iotnet-node.cc  iotnet-node.h  iotnet-router.cc  iotnet-router.h  iotnet-sensor.cc  iotnet-sensor.h  iotnet-server.cc  iotnet-server.h  iotnet-wifi.cc  iotnet-wifi.h  iotnet.cc  iotnet.h
ns3/iotnet/src/: main.cc
ns3/iotnet/test/: iotnet-test-suite.cc
ns3/jamming/: wscript
sensor-node/: README.md
(+86 files in other folders)
